# parameter-golf

./: .gitignore  AGENTS.md  PARALLEL_EXPERIMENTS.md  pyproject.toml  train_gpt_mlx.py
codex_notes/: README.md
codex_notes/coordination/: active_run_status.md  baseline_benchmarks.md  experiment_board.md  local_rerun_wave_20260327.md  local_run_queue.md  merged_record_calibration_20260406.md  pr824_mimic_ablation_20260327.md  promotion_rubric.md  remote_experiment_playbook.md  remote_handoff_20260406.md  remote_pod_inventory.md  remote_preflight_20260406.md  remote_run_queue.md  remote_validation_shakedown_20260406.md  results_snapshot_20260402.md  submission_batch_queue.tsv  submission_batch_queue_a.tsv  submission_batch_queue_b.tsv  submission_batch_queue_c.tsv  submission_record_calibration_20260406.md  submission_reference_curve.tsv
codex_notes/planning/: first_wave_experiments.md  (+12 more)
scripts/: claim_remote_submission_pod.sh  claim_remote_validation_pod.sh  create_experiment_worktree.sh  create_remote_submission_pod.sh  prepare_local_extended_data.sh  pull_remote_run_artifacts.sh  release_remote_submission_pod.sh  release_remote_validation_pod.sh  remove_experiment_worktree.sh  resolve_runpod_ssh_key.sh  restore_experiment_worktrees.sh  run_local_confirm_mlx.sh  run_local_overnight_mlx.sh  run_local_screen_mlx.sh  run_local_wave.sh  run_remote_experiment.sh  run_remote_submission_8xh100.sh  run_remote_submission_batch.sh  run_remote_validation_sequence.sh  summarize_local_wave.py
wulfie_notes/: TODO.md  deep-research.md  submission_requirements.md
(+63 files in other folders)
